end of day commit, half way through adding userreviews, contract wont compile

--- a/app/index.html
+++ b/app/index.html
@@ -8,26 +8,19 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script> 
 		$(function(){
-			$("#includedContent").load("header.html"); 
+			$("#headerBanner").load("header.html"); 
 		});
 	</script> 
 </head>
 
 <body>
-	<div id="includedContent"></div>
+	<div id="headerBanner"></div>
 	<p class="auto-style-content" style="height: 17px; vertical-align: top">By default, reviews are listed by review date and not release date. Films are rated up to <img src="images/4.png" >.</p><br>
 	
-		<table align="center" class="auto-style3" style="width: 525px">		  	
-			<tr>
-				<td class="auto-style-content">
-					<a href=index.php?peen= title="Previous" style="color: #CCCCCC; text-decoration: none;">Previous </a>
-					Showing reviews 1 to 2 of 3
-					<a href=index.php?peen='.$rubes.'&startfrom='.$startfromplustwenty.' title="Next" style="color: #CCCCCC; text-decoration: none;"> Next</a>
-				</tr>
-			</table>'
+
 			<div id="reviews">
 			</div>
 
 	</body>
-	
+
 	</html>
