--- a/app/addreview.html
+++ b/app/addreview.html
@@ -28,14 +28,13 @@
    <label for="film-score" class="col-sm-2 control-label">Score</label>
    <div class="col-sm-10">
     <select class="form-control" name="film-score" id="film-score">
-     <option>0.5</option>
-     <option>1</option>
-     <option>1.5</option>
-     <option>2</option>
-     <option>2.5</option>
-     <option>3</option>
-     <option>3.5</option>
-     <option>4</option>
+     <option value="5">0.5</option>
+     <option value="10">1</option>
+     <option value="15">1.5</option>
+     <option value="20">2</option>
+     <option value="25">2.5</option>
+     <option value="35">3.5</option>
+     <option value="40">40</option>
    </select>
  </div>
 </div>
