end of day. Made a start on userreviewcount field in mongodb, doesnt work yet, meanwhile user reiews arent working if id=1 for soe reason

--- a/app/userreviews.html
+++ b/app/userreviews.html
@@ -12,7 +12,7 @@
 
 
     $(function(){
-  var list = ['At no point did I see Gandalf', 'Like most films, this could have been improved by a hot ginger central character','This film was built like a Steakhouse, but handles like a Bistro', 'I appreciated the fact that Tom Cruise did not appear', 'Drew your site is bad and you should feel bad', 'I did not enjoy the film, and I enjoyed reading your review of it even less', 'Offers nothing for those with yellow fever', ''],
+  var list = ['At no point did I see Gandalf', 'Like most films, this could have been improved by a hot ginger central character','This film was built like a Steakhouse, but handles like a Bistro', 'I appreciated the fact that Tom Cruise did not appear', 'Drew your site is bad and you should feel bad', 'I did not enjoy the film, and I enjoyed reading your review of it even less', 'Offers nothing for those with yellow fever', 'Why not Zoidberg?'],
       r = Math.floor(Math.random() * list.length);
   $('#review-text').prop('placeholder',list[r]);
 });
