--- a/app/editreview.html
+++ b/app/editreview.html
@@ -22,6 +22,15 @@
           <input type="text" name="id" class="form-control" id="id" required="required"></input>
         </div>
       </div>
+            <div class="form-group">
+        <label for="film-name" class="col-sm-2 control-label">Delete</label>
+        <div class="col-sm-10">
+         <select class="form-control" name="deleted" id="deleted">
+            <option value="0">0</option>
+            <option value="1">1</option>
+          </select>
+        </div>
+      </div>
       <div class="form-group">
         <label for="film-name" class="col-sm-2 control-label">Name</label>
         <div class="col-sm-10">
