Seems to be working 100%. Time for actually working on content!

--- a/app/deleteuserreview.html
+++ b/app/deleteuserreview.html
@@ -14,7 +14,7 @@
   <body>
     <div id="headerBanner"></div>
     <br><br>
-    <form class="form-horizontal col-sm-5" id="edit-user-review">
+    <form class="form-horizontal col-sm-5" id="delete-user-review">
 
       <div class="form-group">
         <label for="film-name" class="col-sm-2 control-label">Review Id</label>
