--- a/app/header.html
+++ b/app/header.html
@@ -1,6 +1,6 @@
 <div id="header" style="height: 55px;">
 	<span id="header-left-side">Most recent User Review:<br><span id="recent-user-review"></span></span>
-	<span id="header-center"><strong>DREW'S REVIEWS</strong></span>
+	<span id="header-center"><strong><a href="/">DREW'S REVIEWS</a></strong></span>
 <!-- 	<table style="width: 100%; height: 111px" class="auto-style2">
 		<tr>
 			<td style="width: 25%;" class="auto-style-sortby" style="float:left" valign="top">
