--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div id="headerBanner"></div>
-	<p class="auto-style-content" style="height: 17px; vertical-align: top">By default, reviews are listed by review date and not release date. Films are rated up to <img src="images/40.png" >.</p><br>
+	<p class="auto-style-content" style="height: 17px; vertical-align: top">Reviews are listed in order of when I review them. Films are rated up to <img src="images/40.png" >. All reviews are stored on the Ethereum blockchain for no reason.</p><br>
 	
 
 			<div id="reviews">
