--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 <body>
 	<div id="headerBanner"></div>
 	<p class="auto-style-content" style="height: 17px; vertical-align: top">Reviews are listed in order of when I review them. Films are rated up to <img src="images/40.png" >.</p>
-	<p class="auto-style-content" style="height: 17px; vertical-align: top">All reviews are stored on the Ethereum blockchain for no reason. If you have MetaMask you can add your own reviews to a film already listed.</p><br>
+	<p class="auto-style-content" style="height: 17px; vertical-align: top">All reviews are stored on the Ethereum blockchain for no reason. If you have MetaMask and feel like wasting $1.50 you can add your own review to a film already listed.</p><br>
 	
 
 	<div id="reviews">
